# Robot2025-A

./: .gitmodules  LICENSE  README.md  main.py  music_main.py  requirements.txt  run_auto.sh
BMI270/: BMI270.py  IMU.py  accelClass.py  config_file.py  controlsClass.py  gyroClass.py  quaternion_utils.py  registerDefinitions.py  rotation_matrix.py
config/: chassis.py
control/: beacon.py  dumper.py  intake.py  mover.py  safety.py
control/drivetrain/: move_to_pose.py
cu_hal/: interfaces.py
cu_hal/auxilliary/: auxilliary_hw.py
cu_hal/drivetrain/: drivetrain_hw.py  drivetrain_i2c.py  drivetrain_sim.py  drivetrain_wifi.py
docs/: robot_geometry.md
hal/: README.md  interfaces.py
hal/drivetrain/: drivetrain_hw.py  drivetrain_wifi.py
micro/archived/BMI270/: BMI270.py  IMU.py  filter.py
micro/archived/drivetrain/: config.py  encoder_pio.py  magnometer.py  main.py  pi_motor.py
micro/archived/music/: buzzer_music.py
micro/archived/sorter/: hall_effect_test.py
micro/aux_native/: CMakeLists.txt  README.md
micro/aux_native/include/: accel_stepper.h  comm.h  config.h  encoder.h  music.h  pid_control.h  util.h
micro/aux_native/src/: accel_stepper.cpp  encoder.c  main.c  main.cpp  music.c  pi_motor.c  pid_control.c
micro/aux_native/tools/: song_str_to_c.py
micro/drivetrain/: build_encoder_pio.sh  config.py  encoder.pio  encoder.py  intake_test.py  main.py  pi_motor.py  pid_controller.py  test_main.py  util.py
micro/drivetrain_native/: CMakeLists.txt  README.md
micro/drivetrain_native/include/: bmi2.h  bno055.h  comm.h  config.h  encoder.h  i2c_fifo.h  i2c_slave.h  imu.h  madgwick_filter.h  pi_motor.h  util.h
micro/drivetrain_native/src/: encoder.pio  i2c_slave.c  imu.c  madgwick_filter.c  main.c  main.cpp  pi_motor.c  util.c
micro/music/: music_sheets.py
sim/: README.md  dcmotor.py  differential_chassis.py  field.py  masses.py  mecanum_chassis.py
subsystems/: beacon.py  drivetrain.py  dumper.py  intake.py  mover.py  safety.py
subsystems/math/: pose.py  poseestimator.py
subsystems/vision/: __init__.py  apriltag_detector.py  light_detection_modular.py  vision.py  vision_config.py
subsystems/vision/openMV/: apriltag_detect.py  line_detect.py  rock_n_lineblob.py
subsystems/vision/openMV/Caleb/: autorun.inf  single_color_code_tracking_1.py
tests/: test_poseestimator.py  test_posemath.py
tools/: auto_demo.py  aux_i2c_test.py  calib_results  calib_test.py  drivetrain_commlib_test.py  drivetrain_wifi.py  grabber_test.py  i2c_test.py  intake_test.py  rotate_demo.py  vision_subsystem_demo.py
